kubernetes/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: production-eks-platform

spec:

  # Select all pods in this namespace
  podSelector: {}

  # Block both incoming and outgoing traffic
  policyTypes:

    - Ingress
    - Egress
